// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getThemedColors() should return correct colors for theme: dark 1`] = `
{
  "activeColor": "rgba(126, 127, 130, 0.20)",
  "backgroundColor": "#0E0E12",
  "backgroundColorDarken": "#000000",
  "backgroundColorLighten": "#292934",
  "backgroundSurfaceColor": "#212225",
  "backgroundSurfaceColorDarken": "#040405",
  "backgroundSurfaceColorLighten": "#3E4045",
  "contrastHighColor": "#AFB0B3",
  "contrastHighColorDarken": "#909195",
  "contrastHighColorLighten": "#CECFD1",
  "contrastLowColor": "#404044",
  "contrastMediumColor": "#88898C",
  "disabledColor": "#7E7F82",
  "errorColor": "#FC4040",
  "errorColorDarken": "#FB0404",
  "errorSoftColor": "#3A0F0F",
  "errorSoftColorDarken": "#1A1111",
  "errorSoftColorLighten": "#3F2828",
  "focusColor": "#1A44EA",
  "hoverColor": "rgba(148, 149, 152, .18)",
  "hoverColorDarken": "#75767A",
  "infoColor": "#178BFF",
  "infoSoftColor": "#04294E",
  "infoSoftColorDarken": "#0C1A27",
  "infoSoftColorLighten": "#1A3856",
  "primaryColor": "#FBFCFF",
  "primaryColorDarken": "#BECEFF",
  "successColor": "#09D087",
  "successColorDarken": "#069561",
  "successSoftColor": "#003320",
  "successSoftColorDarken": "#04110C",
  "successSoftColorLighten": "#0F432F",
  "warningColor": "#F7CB47",
  "warningSoftColor": "#362B0A",
  "warningSoftColorDarken": "#16130B",
  "warningSoftColorLighten": "#3E3720",
}
`;

exports[`getThemedColors() should return correct colors for theme: light 1`] = `
{
  "activeColor": "rgba(148, 149, 152, 0.20)",
  "backgroundColor": "#FFF",
  "backgroundColorDarken": "#E0E0E0",
  "backgroundColorLighten": "#FFFFFF",
  "backgroundSurfaceColor": "#EEEFF2",
  "backgroundSurfaceColorDarken": "#CBCED7",
  "backgroundSurfaceColorLighten": "#FFFFFF",
  "contrastHighColor": "#535457",
  "contrastHighColorDarken": "#353638",
  "contrastHighColorLighten": "#717276",
  "contrastLowColor": "#D8D8DB",
  "contrastMediumColor": "#6B6D70",
  "disabledColor": "#949598",
  "errorColor": "#CC1922",
  "errorColorDarken": "#951219",
  "errorSoftColor": "#FFE2E4",
  "errorSoftColorDarken": "#F4CED1",
  "errorSoftColorLighten": "#FFFFFF",
  "focusColor": "#1A44EA",
  "hoverColor": "rgba(148, 149, 152, .18)",
  "hoverColorDarken": "#75767A",
  "infoColor": "#2762EC",
  "infoSoftColor": "#D3E1FF",
  "infoSoftColorDarken": "#C2D1F1",
  "infoSoftColorLighten": "#F4F7FD",
  "primaryColor": "#010205",
  "primaryColorDarken": "#000000",
  "successColor": "#197E10",
  "successColorDarken": "#0E4809",
  "successSoftColor": "#E4FFEC",
  "successSoftColorDarken": "#D0F4DB",
  "successSoftColorLighten": "#FFFFFF",
  "warningColor": "#F3BE00",
  "warningSoftColor": "#FFF4D2",
  "warningSoftColorDarken": "#F1E5C1",
  "warningSoftColorLighten": "#FCFAF3",
}
`;

exports[`getThemedColors() should return correct partial high contrast mode scheme colors for theme: dark 1`] = `
{
  "activeColor": "rgba(126, 127, 130, 0.20)",
  "backgroundColor": "#0E0E12",
  "backgroundColorDarken": "#000000",
  "backgroundColorLighten": "#292934",
  "backgroundSurfaceColor": "#212225",
  "backgroundSurfaceColorDarken": "#040405",
  "backgroundSurfaceColorLighten": "#3E4045",
  "contrastHighColor": "#AFB0B3",
  "contrastHighColorDarken": "#909195",
  "contrastHighColorLighten": "#CECFD1",
  "contrastLowColor": "#404044",
  "contrastMediumColor": "#88898C",
  "disabledColor": "GrayText",
  "errorColor": "#FC4040",
  "errorColorDarken": "#FB0404",
  "errorSoftColor": "#3A0F0F",
  "errorSoftColorDarken": "#1A1111",
  "errorSoftColorLighten": "#3F2828",
  "focusColor": "Highlight",
  "hoverColor": "rgba(148, 149, 152, .18)",
  "hoverColorDarken": "#75767A",
  "infoColor": "#178BFF",
  "infoSoftColor": "#04294E",
  "infoSoftColorDarken": "#0C1A27",
  "infoSoftColorLighten": "#1A3856",
  "primaryColor": "#FBFCFF",
  "primaryColorDarken": "#BECEFF",
  "successColor": "#09D087",
  "successColorDarken": "#069561",
  "successSoftColor": "#003320",
  "successSoftColorDarken": "#04110C",
  "successSoftColorLighten": "#0F432F",
  "warningColor": "#F7CB47",
  "warningSoftColor": "#362B0A",
  "warningSoftColorDarken": "#16130B",
  "warningSoftColorLighten": "#3E3720",
}
`;

exports[`getThemedColors() should return correct partial high contrast mode scheme colors for theme: light 1`] = `
{
  "activeColor": "rgba(148, 149, 152, 0.20)",
  "backgroundColor": "#FFF",
  "backgroundColorDarken": "#E0E0E0",
  "backgroundColorLighten": "#FFFFFF",
  "backgroundSurfaceColor": "#EEEFF2",
  "backgroundSurfaceColorDarken": "#CBCED7",
  "backgroundSurfaceColorLighten": "#FFFFFF",
  "contrastHighColor": "#535457",
  "contrastHighColorDarken": "#353638",
  "contrastHighColorLighten": "#717276",
  "contrastLowColor": "#D8D8DB",
  "contrastMediumColor": "#6B6D70",
  "disabledColor": "GrayText",
  "errorColor": "#CC1922",
  "errorColorDarken": "#951219",
  "errorSoftColor": "#FFE2E4",
  "errorSoftColorDarken": "#F4CED1",
  "errorSoftColorLighten": "#FFFFFF",
  "focusColor": "Highlight",
  "hoverColor": "rgba(148, 149, 152, .18)",
  "hoverColorDarken": "#75767A",
  "infoColor": "#2762EC",
  "infoSoftColor": "#D3E1FF",
  "infoSoftColorDarken": "#C2D1F1",
  "infoSoftColorLighten": "#F4F7FD",
  "primaryColor": "#010205",
  "primaryColorDarken": "#000000",
  "successColor": "#197E10",
  "successColorDarken": "#0E4809",
  "successSoftColor": "#E4FFEC",
  "successSoftColorDarken": "#D0F4DB",
  "successSoftColorLighten": "#FFFFFF",
  "warningColor": "#F3BE00",
  "warningSoftColor": "#FFF4D2",
  "warningSoftColorDarken": "#F1E5C1",
  "warningSoftColorLighten": "#FCFAF3",
}
`;
